<resources>
    <string name="app_name">Familieappen</string>
    <string name="gruppe">Gruppe</string>
    <string name="hovedside">Hovedside</string>
    <string name="profil">Profil</string>
    <string name="legg_til_aktivitet2">Legg til aktivitet</string>
    <string name="action_settings">Settings</string>
    <string name="gruppeinformasjon">Gruppeinformasjon</string>
    <string name="kastUtMedlem">Kast ut medlem:</string>
    <string name="send">Send</string>
    <string name="err_msg_email">Emailen er ikke gyldig</string>
    <string name="err_msg_navn">Navnet er ikke gyldig</string>
    <string name="endreProfil">Endre profil</string>
    <string name="leggTilMedlemMedID">Legg til medlem med ID:</string>
    <string name="exampleID">#4458675</string>
    <string name="none"> </string>
    <string name="Login">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginEmailOverskrift">Email</string>
    <string name="title_activity_gruppeinformasjon1">GruppeinformasjonActivity1</string>
    <string name="kalender">Kalender</string>
    <string name="familiebobla">Familiebobla</string>
    <string name="oenskeliste">Ønskeliste</string>
    <string name="gruppeinfo">Gruppeinfo</string>
    <string name="familyname">FamilyName</string>
    <string name="familieid">FamilieId</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="velg_startdag">Velg startdag</string>
    <string name="lag_matplan">Lag matplan</string>
    <string name="velg_antall_dager">Velg antall dager</string>
    <string name="avbryt">Avbryt</string>
    <string name="lag">Lag</string>
    <string name="lagre">Lagre</string>
    <string name="input">Legg til vare</string>
    <string name="bildeinfo">Profilbilde</string>
    <string name="skriv">Hva vil du handle?</string>
    <string name="skriv2">Skriv inn</string>
    <string name="id">Bruker-ID</string>
    <string name="legg_til_en_bursdag">Legg til en bursdag</string>
    <string name="ola_nordmann">Ola Nordmann</string>
    <string name="logg_ut">Logg ut</string>
    <string name="rediger">Rediger</string>
    <string name="add_button_text">Legg Til</string>
    <string name="item_editText_hint">Skriv en ny gjenstand</string>
    <string name="navn">Skriv inn navn til handlelisten</string>
    <string name="handleliste">Lag en handleliste</string>
    <string name="handlelisteHovedside">Handleliste</string>
    <string name="fornavn_etternavn">Fornavn Etternavn</string>
    <string name="endreProfilNavn">Navn</string>
    <string name="endreProfilEmail">Email</string>
    <string name="email">Email</string>
    <string name="passord">Passord</string>
    <string name="passord2">Gjenta passord</string>
    <string name="opprettBrukerNavn">Navn</string>
    <string name="opprettBrukerEmail">Ola@nordmann.no</string>
    <string name="opprettPassord">Opprett passord</string>
    <string name="gjentaPassord">Gjenta Passord</string>
    <string name="opprettBruker">Opprett bruker</string>
    <string name="PhoneNumberHint">+47 12365478</string>
    <string name="dd_mm_yyyy">DD.MM.YYYY</string>
    <string name="fullt_navn">Fullt navn</string>
    <string name="mobilnummer">Mobilnummer: </string>
    <string name="foedselsdato">Fødselsdato: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logg_inn">Logg inn</string>
    <string name="example_email_com">example@email.com</string>
    <string name="opprett_bruker">Opprett bruker</string>
    <string name="logo">Logo</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="profilBilde">Profilbilde</string>
    <string name="textView">TextView</string>
    <string name="registrer_bruker">Registrer bruker</string>
    <string name="rediger_profil">Rediger profil</string>
    <string name="handlelisteOverskrift">Handleliste</string>
    <string name="handleliste_nr">Handleliste nr:</string>
    <string name="ny_vare">Ny vare</string>
    <string name="delete">Delete</string>
    <string name="tilbake">Tilbake</string>
    <string name="ny_bursdag">Ny bursdag</string>
    <string name="bursdager">Bursdager</string>
    <string name="ny_samtale">Ny samtale</string>
    <string name="start_en_samtale_med">Start en samtale med:</string>
    <string name="opprett_samtale">Opprett samtale</string>
    <string name="Handleliste">Handleliste</string>
    <string name="ny_handleliste">test</string>
    <string name="har_du_ikke_bruker">Har du ikke bruker?</string>
    <string name="registrer_deg">Registrer deg</string>
    <string name="nothing_to_show_here">Nothing to show here</string>
    <string name="matplan">Matplan</string>
    <string name="nskelister">Ønskelister</string>
    <string name="bruker_id">Bruker-ID: </string>
    <string name="opprett_en_matplan">Opprett en matplan!</string>
    <string name="exampleYear">x år</string>
    <string name="deleteBtn">deleteBtn</string>
    <string name="familieidDrawer">FamilieID</string>
    <string name="textview">TextView</string>
    <string name="message">Message</string>
    <string name="addBirthday">Legg til en bursdag!</string>
    <string name="joinFamilyBtn">Bli medlem av eksisterende familie</string>
    <string name="createNewFamilyBtn">Opprett ny familie</string>
    <string name="familyId">Familieid</string>
    <string name="fillFamilyId">Skriv inn FamilieId</string>
    <string name="fillPassword">Skriv inn passord</string>
    <string name="bliMedlem">Bli Medlem</string>
    <string name="familyName">Familienavn</string>
    <string name="createPassword">Opprett passord</string>
    <string name="repeatPassword">Gjenta passord</string>
    <string name="start_en_samtale">Start en samtale!</string>
    <string name="chatName">Samtale navn</string>
    <string name="giveChatName">Gi navn til samtalen:</string>
    <string name="endre_familienavn">Endre familienavn</string>
    <string name="familienavn">Familie navn</string>
    <string name="endre_familienavnTextView">Endre familienavn:</string>
    <string name="medlemmer">Medlemmer:</string>
    <string name="opprett_en_handleliste">Opprett en handleliste!</string>
    <string name="opprett_handleliste">Opprett handleliste</string>
    <string name="tittel">Tittel</string>
    <string name="vare_navn">Vare navn</string>
    <string name="legg_til">Legg til</string>
    <string name="dato_fra">Dato fra</string>
    <string name="tid_fra">Tid fra</string>
    <string name="tid_til">Tid til</string>
    <string name="dato_til">Dato til</string>
    <string name="aktivitet">Aktivitet</string>
    <string name="endre_aktivitet">Endre aktivitet</string>
    <string name="endre_aktivitet2">Endre aktivitet:</string>
    <string name="opprett">Opprett</string>
    <string name="antallDagerMatplan">Velg antall dager (1–7)</string>
    <string name="startdagMatplan">Velg startdag</string>
    <string name="slett">Slett</string>
    <string name="createWishlist">Opprett en ønskeliste</string>
    <string name="create_wishlist">Opprett ønskeliste</string>
    <string name="nameWishlist">Ønskeliste navn</string>
    <string name="giveWishlistName">Gi navn til ønskelisten:</string>
    <string name="Awish">Ønske</string>
    <string name="saveChanges">Lagre endringer</string>
    <string name="changeTheme">Endre fargetema</string>
    <string name="registerSignup">Registrer deg</string>
    <string name="handleliste_tittel">Handleliste tittel</string>
    <string name="legg_til_aktivitet">Legg til aktivitet:</string>
    <string name="mobilnummerLogin">Mobilnummer</string>
    <string name="birthdays">Bursdager</string>
    <string name="profileNav">Profil</string>
    <string name="groupInfo">Gruppeinformasjon</string>
    <string name="SettingsNav">Settings</string>
    <string name="fyller_x_r">Fyller x år</string>
    <string name="splitValue">\\.</string>
    <string name="mat">Mat</string>
    <string name="datoer">datoer</string>
    <string name="endreBilde">Endre profilbilde</string>
    <string name="leggTilMatplan">Legg til matplan</string>
    <string name="untitled">untitled</string>
    <string name="endre_fargetema">Endre fargetema</string>
    <string name="day_night">Day/Night</string>
    <string name="Darkmode">Dark mode</string>
    <string name="Bluemode">Blue mode</string>
    <string name="Purplemode">Purple mode</string>
    <string-array name="Ukedager">
        <item>Mandag</item>
        <item>Tirsdag</item>
        <item>Onsdag</item>
        <item>Torsdag</item>
        <item>Fredag</item>
        <item>Lørdag</item>
        <item>Søndag</item>
    </string-array>
    <integer-array name="AntallDager">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </integer-array>
</resources>
